--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Astraea CLI</title> <link rel="stylesheet" href="styles.css">
+  <title>Astraea CLI</title> 
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Astraea CLI</h1> 
